--- a/views/css/style.css
+++ b/views/css/style.css
@@ -33,11 +33,15 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  backface-visibility: hidden;
+  will-change: transform;
 }
 
 .randomPizzaContainer {
   float: left;
   display: flex;
+  will-change: transform;
+  backface-visibility: hidden;
 }
 
 .randomPizzaContainer:after {
